2002-05-23  Adam Clark <adamsgl@dhbit.ca>

	Updated to 3.2.3p1

2002-05-18  Adam Clark <adamsgl@dhbit.ca>

	Updated to 3.2.2p1
	Fixed spell to use PAM if admin so wishes

2002-03-20  Luis M. Lourenco  <aeron@netcabo.pt>

        * CONFLICTS: Added.
        
        * BUILD: Added --mandir argument to pass to configure.