@@ -1,3 +1,7 @@
+2002-06-25  Adam Clark <adamsgl@dhbit.ca>
+
+	Updated to 3.3p1 + added tiny security update script
+
 2002-05-23  Adam Clark <adamsgl@dhbit.ca>
 
 	Updated to 3.2.3p1
